fixed order-by-date filter on safari; login css overhaul

--- a/app/styles/bootstrap-overrides.css
+++ b/app/styles/bootstrap-overrides.css
@@ -1,6 +1,5 @@
 .form-control {
-  font-size: 1.5em;
-  font-family: 
+  font-size: 1em;
   font-family: FiraSans, Courier, monospace;
   font-weight: 100;
 }
